--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    if: github.event.commits[0].author.name != 'GitHub Actions'
+    if: github.actor != 'GitHub Actions'
     name: Package distribution file
     runs-on: ubuntu-latest
     steps:
